# trinity-fpga

./: --  --language  --target  --version  -o  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .markdown-link-check.json  .mcp.json  .railwayignore  .ralphrc  .tri-cluster.json  .trinity-strict-mode  .trinityPlan  AGENTS.md  BOGATYRS_DECOMPOSITION.md  CHANGELOG.md  CHROME_IMPLEMENTATION.md  CHROME_PROGRESS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  CREATOR_FINAL_REPORT.md  CYCLE_103_BENCHMARKS.md  CYCLE_109_REPORT.md  CYCLE_111_REPORT.md  CYCLE_121_REPORT.md  CYCLE_98_TASK_SUMMARY.txt  Cargo.toml  DEMONSTRATION_OF_CHANGES.md  DEPLOYMENT_GUIDE.md  DISCORD_GUIDE.md  DSP48E1_mock.v  Dockerfile  Dockerfile.build  (+219 more)
.claude/: ITERATE.md  dev_plan.md  epic-gf16-tf3-fpga.md  rules.md  settings.json  temp_insert_medulla.py
.claude-plugin/: .mcp.json  plugin.json
.devcontainer/: Dockerfile
.doctor/: mark_history.jsonl  migration_queue.json  scan_results.json  violations.jsonl
.githooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_DECISION_v2.1.md  SUPPORT.md  copilot-instructions.md  dependabot.yml  wave9-setup.md
.ralph/: .circuit_breaker_history  .circuit_breaker_state  .claude_session_id  .exit_signals  .json_parse_result  .loop_start_sha  .ralph-cron-state.json  .ralph_session  .ralph_session_history  .ralphrc  .response_analysis  AGENT.md  AGENTS.md  CLAUDE.md  CYCLE_90_PLAN.md  CYCLE_91_PLAN.md  HANDOVER.md  IDENTITY.md  PROJECT_CLEANUP_PLAN.md  PROMPT.md  README.md  README_STATUS.md  RULES.md  STATUS_INTEGRATION.md  SUCCESS_HISTORY.md  TECH_TREE.md  TOXIC_VERDICT_HW003.md  WORKTREE_STATUS.md  fix_plan.md  god_mode.sh  progress.json  ralph_pulse.sh  rollback_state.json  status_message.txt  status_report.json
.trinity/: AUTONOMOUS_LOOP.md  agent_log.md  arena_deploy.json  arena_results.json  auto_action_failures.json  auto_action_result.json  baselines.json  brain_alerts.jsonl  brain_health_history.jsonl  canon_map.json  command_cache.json  compact_prev.raw  compact_prev.raw.bak  competitive_intelligence.md  config.toml  dashboard_prev.json  dev_agents.json  dev_loop_state.json  dev_session.json  e2e_results.json  event_log.jsonl  events.jsonl  evolution_analysis.md  evolution_lineage.jsonl  evolution_state.json  evolution_summary.txt  issue_bindings.json  issues_snapshot.json  local_farm.json  loop_state.json  loop_state.md  mcp_schemas.json  night-evolution-map.md  orchestration.json  ouroboros_metrics.json  ouroboros_state.json  pick_result.json  pinned_message_id  pipeline_state.json  priorities.md  (+17 more)
.trinity-nexus/: .safety_log.json
.vibee_backups/: autoscaling.vibee.1771619830.bak  autoscaling.vibee.1771619876.bak  b2t_llm_assist.vibee.1771620291.bak  b2t_llm_lifter.vibee.1771620292.bak  b2t_prompts.vibee.1771620292.bak  b2t_rag.vibee.1771620265.bak  b2t_rag.vibee.1771620292.bak  batch_processing.vibee.1771617704.bak  batch_processing.vibee.1771619876.bak  batch_processing.vibee.1771620265.bak  batch_processing.vibee.1771620291.bak  batch_processing.vibee.1771646571.bak  batch_processing.vibee.1771646967.bak  fluent_multilingual_chat.vibee.1771620296.bak  golden_chain.vibee.1771620295.bak  llm_full_inference.vibee.1771620296.bak  local_llm_fallback.vibee.1771620292.bak  math_framework_proof.vibee.1771620267.bak  math_framework_proof.vibee.1771620292.bak  multilingual_codegen.vibee.1771620297.bak  needle_v2.vibee.1771620297.bak  response_verifier.vibee.1771620270.bak  swarm_watch.vibee.1771620292.bak  (+11 more)
deploy/trinity-nexus/lang/libs/rust/trinity-vsa/: Cargo.toml
deploy/trinity-nexus/lang/libs/rust/trinity-vsa/src/: vector.rs
libs/haskell/trinity-vsa/: README.md  trinity-vsa.cabal
libs/haskell/trinity-vsa/src/: TrinityVSA.hs
rings/BR-BITSTREAM/: AGENTS.md  Cargo.toml  README.md  TASK.md
rings/BR-BITSTREAM/src/: main.rs
rings/FP-01/: AGENTS.md  Cargo.toml  README.md  TASK.md
rings/FP-01/src/: lib.rs
trinity-nexus/lang/libs/python/trinity_vsa/: README.md  pyproject.toml
trinity-nexus/lang/libs/python/trinity_vsa/examples/: demo_native.py
trinity-nexus/lang/libs/python/trinity_vsa/src/trinity_vsa/: ops.py
(+26161 files in other folders)
