[package]
name = "trios-fpga"
version = "0.1.0"
edition = "2021"
description = "BR-BITSTREAM: CLI for trios-fpga (synthesis, flash, verify)"
license = "MIT"

[[bin]]
name = "trios-fpga"
path = "src/main.rs"

[dependencies]
trios-fpga-fp00 = { path = "../FP-00" }
trios-fpga-fp01 = { path = "../FP-01" }
trios-fpga-fp02 = { path = "../FP-02" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
