cabal-version: 2.4
name:          trinity-vsa
version:       0.1.0.0
synopsis:      Vector Symbolic Architecture with balanced ternary arithmetic
license:       MIT
author:        Trinity Project
maintainer:    trinity@example.com

library
  exposed-modules:  TrinityVSA
  build-depends:    base >= 4.14 && < 5, vector >= 0.12
  hs-source-dirs:   src
  default-language: Haskell2010
