[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trinity-vsa"
version = "0.1.0"
description = "High-performance Vector Symbolic Architecture with balanced ternary arithmetic"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dmitrii Vasilev", email = "gHashTag@gmail.com"}
]
keywords = ["vsa", "hyperdimensional", "ternary", "machine-learning", "fpga"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
jax = ["jax>=0.4", "jaxlib>=0.4"]
dev = ["pytest>=7.0", "pytest-benchmark>=4.0"]

[project.urls]
Homepage = "https://github.com/gHashTag/trinity"
Documentation = "https://trinity-vsa.readthedocs.io"
Repository = "https://github.com/gHashTag/trinity"

[tool.setuptools.packages.find]
where = ["src"]
